--- a/xml/inequalityloader.ui
+++ b/xml/inequalityloader.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>679</width>
+    <width>658</width>
     <height>25</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>25</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>InequalityLoader</string>
