--- a/xml/bareminimumplotter.ui
+++ b/xml/bareminimumplotter.ui
@@ -223,7 +223,7 @@
                  </size>
                 </property>
                 <property name="text">
-                 <string>&amp;Load </string>
+                 <string>Load </string>
                 </property>
                </widget>
               </item>
@@ -575,8 +575,8 @@
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>766</width>
-                    <height>104</height>
+                    <width>771</width>
+                    <height>117</height>
                    </rect>
                   </property>
                   <property name="focusPolicy">
@@ -1113,8 +1113,8 @@
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>766</width>
-                    <height>111</height>
+                    <width>771</width>
+                    <height>94</height>
                    </rect>
                   </property>
                   <property name="autoFillBackground">
@@ -1208,7 +1208,7 @@
             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:10pt;&quot;&gt;Log&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="textInteractionFlags">
@@ -1450,6 +1450,9 @@ p, li { white-space: pre-wrap; }
            </item>
            <item row="0" column="1">
             <widget class="QLineEdit" name="lineEdit_SettingsTolerance">
+             <property name="toolTip">
+              <string>Sets the tolerance of the inequality comparison. </string>
+             </property>
              <property name="text">
               <string>1E-5</string>
              </property>
@@ -1499,7 +1502,7 @@ p, li { white-space: pre-wrap; }
      <x>0</x>
      <y>0</y>
      <width>913</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
