--- a/xml/variableinput.ui
+++ b/xml/variableinput.ui
@@ -22,6 +22,12 @@
     <height>22</height>
    </size>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>25</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>VariableInput</string>
   </property>
