microtweaks. testing SSH.

--- a/rsc/theme_default.css
+++ b/rsc/theme_default.css
@@ -109,8 +109,9 @@ QPushButton:pressed{
 }
 
 QPushButton:disabled{
-	background: rgb(210, 210, 210);
-	border: transparent;
+        color: white;
+        border: transparent;
+        background: rgb(210,210,210);
 }
 
 QPushButton#pushButton_Down{
