added packaging info for desktop icons as well as relevant icon pixmaps. added qt.conf.

--- a/rsc/rsc.qrc
+++ b/rsc/rsc.qrc
@@ -25,7 +25,10 @@
         <file>up-arrow-black.png</file>
         <file>up-arrow-black-small.png</file>
     </qresource>
-    <qresource prefix="/style" lang="CSS">
+    <qresource lang="CSS" prefix="/style">
         <file>theme_default.css</file>
+    </qresource>
+    <qresource prefix="/qt/etc">
+        <file>qt.conf</file>
     </qresource>
 </RCC>
